--- a/app/src/main/res/drawable/camera_tag_style.xml
+++ b/app/src/main/res/drawable/camera_tag_style.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@drawable/checked_bg"
-          android:state_checked="true"></item>
-    <item android:drawable="@drawable/normal_bg"></item>
+          android:state_pressed="true"/>
+    <item android:drawable="@drawable/normal_bg"/>
 </selector>
