--- a/app/src/main/res/layout/camera_list_activity.xml
+++ b/app/src/main/res/layout/camera_list_activity.xml
@@ -1,64 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:zhy="http://schemas.android.com/apk/res-auto"
               android:background="@color/white"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-    <!--<GridView-->
-        <!--android:id="@+id/camera_list_activity_grid"-->
-        <!--android:numColumns="4"-->
-        <!--android:verticalSpacing="9dp"-->
-        <!--android:horizontalSpacing="9dp"-->
-        <!--android:layout_weight="4"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="0dp"/>-->
-    <ScrollView
-        android:id="@+id/camera_list_activity_scroll"
-        android:layout_weight="4"
+    <RelativeLayout
+        android:layout_weight="1"
+        android:background="@color/btn_frameAndText_color"
         android:layout_width="match_parent"
         android:layout_height="0dp">
-        <com.testone.coffee.testone.view.ui.flowlayout.TagFlowLayout
-            zhy:max_select="1"
-            android:id="@+id/camera_list_activity_tagLayout"
+        <TextView
+            android:id="@+id/camera_list_activity_title"
+            android:text="@string/list_activity_title"
+            android:textColor="@color/white"
+            android:textSize="23dp"
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <RelativeLayout
+            android:id="@+id/camera_list_activity_addroom"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="20dp"
+            android:layout_width="60dp"
+            android:layout_height="match_parent">
+            <ImageView
+                android:id="@+id/camera_list_activity_add"
+                android:src="@mipmap/btn_add"
+                android:layout_centerInParent="true"
+                android:layout_width="40dp"
+                android:layout_height="40dp"/>
+
+        </RelativeLayout>
+
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/camera_list_activity_gridroom"
+        android:layout_weight="6"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+        <GridView
+            android:id="@+id/camera_list_activity_grid"
+            android:numColumns="5"
+            android:verticalSpacing="9dp"
+            android:horizontalSpacing="9dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-    </ScrollView>
-    <LinearLayout
-        android:id="@+id/camera_list_activity_btnroom"
-        android:layout_weight="1"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="0dp">
-        <TextView
-            android:id="@+id/camera_list_activity_btnroom_addBtn"
-            style="@style/btn_text_style"
-            android:text="@string/btn_add"
-            android:layout_marginLeft="9dp"
-            android:layout_marginRight="9dp"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"/>
-        <TextView
-            android:id="@+id/camera_list_activity_btnroom_delBtn"
-            style="@style/btn_text_style"
-            android:text="@string/btn_del"
-            android:layout_marginLeft="9dp"
-            android:layout_marginRight="9dp"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"/>
-        <TextView
-            android:id="@+id/camera_list_activity_btnroom_watchBtn"
-            style="@style/btn_text_style"
-            android:text="@string/btn_watch"
-            android:layout_marginLeft="9dp"
-            android:layout_marginRight="9dp"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"/>
-
-    </LinearLayout>
+    </RelativeLayout>
 
 </LinearLayout>
