--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="white">#FFFFFF</color>
     <color name="translucent">#00000000</color>
     <color name="black_565656">#565656</color>
+    <color name="gray_787878">#787878</color>
 </resources>
