--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,10 +19,10 @@
     <style name="btn_text_noFrame_style">
         <item name="android:layout_gravity">center</item>
         <item name="android:gravity">center</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">20dp</item>
         <item name="android:textColor">@color/btn_frameAndText_color</item>
-        <item name="android:layout_marginTop">12dp</item>
-        <item name="android:layout_marginBottom">12dp</item>
+        <item name="android:layout_marginTop">24dp</item>
+        <item name="android:layout_marginBottom">24dp</item>
     </style>
     <style name="add_label_style">
         <item name="android:textSize">16sp</item>
@@ -35,5 +35,12 @@
         <item name="android:textSize">15sp</item>
         <item name="android:textColor">@color/btn_frameAndText_color</item>
     </style>
+    <style name="edit_text_label_style">
+        <item name="android:textSize">20dp</item>
+        <item name="android:textColor">@color/btn_frameAndText_color</item>
+        <item name="android:layout_alignParentLeft">true</item>
+        <item name="android:layout_centerVertical">true</item>
+    </style>
+
 
 </resources>
