--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
     <color name="btn_frameAndText_color">#FF2873</color>
     <color name="white">#FFFFFF</color>
+    <color name="gray_969696">#969696</color>
     <color name="translucent">#00000000</color>
     <color name="black_565656">#565656</color>
     <color name="gray_787878">#787878</color>
