--- a/app/src/main/res/layout/camera_add_activity.xml
+++ b/app/src/main/res/layout/camera_add_activity.xml
@@ -45,7 +45,6 @@
         <LinearLayout
             android:id="@+id/camera_add_activity_lefteditroom"
             android:orientation="vertical"
-            android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content">
@@ -64,10 +63,10 @@
                     android:textColor="@color/black_565656"
                     android:textSize="17dp"
                     android:hint="@string/add_edit_name_hint"
-                    android:maxLines="1"
-                    android:layout_toRightOf="@+id/camera_add_activity_name_editLayout_label"
+                    android:singleLine="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="9dp"
+                    android:layout_marginLeft="75dp"
+                    android:imeOptions="actionNext"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"/>
 
@@ -87,9 +86,9 @@
                     android:textColor="@color/black_565656"
                     android:textSize="17dp"
                     android:hint="@string/add_edit_port_hint"
-                    android:maxLines="1"
-                    android:layout_marginLeft="9dp"
-                    android:layout_toRightOf="@+id/camera_add_activity_port_editLayout_label"
+                    android:singleLine="true"
+                    android:imeOptions="actionNext"
+                    android:layout_marginLeft="75dp"
                     android:layout_centerVertical="true"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"/>
@@ -110,9 +109,9 @@
                     android:textColor="@color/black_565656"
                     android:textSize="17dp"
                     android:hint="@string/add_edit_username_hint"
-                    android:maxLines="1"
-                    android:layout_marginLeft="9dp"
-                    android:layout_toRightOf="@+id/camera_add_activity_username_editLayout_label"
+                    android:singleLine="true"
+                    android:imeOptions="actionNext"
+                    android:layout_marginLeft="75dp"
                     android:layout_centerVertical="true"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"/>
@@ -123,7 +122,7 @@
         <LinearLayout
             android:id="@+id/camera_add_activity_righteditroom"
             android:orientation="vertical"
-            android:layout_marginTop="10dp"
+            android:layout_marginLeft="-9dp"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content">
@@ -142,10 +141,10 @@
                     android:textColor="@color/black_565656"
                     android:textSize="17dp"
                     android:hint="@string/add_edit_ip_hint"
-                    android:layout_marginLeft="9dp"
-                    android:layout_toRightOf="@+id/camera_add_activity_ip_editLayout_label"
+                    android:layout_marginLeft="75dp"
                     android:layout_centerVertical="true"
-                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:imeOptions="actionNext"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"/>
 
@@ -158,7 +157,6 @@
                     android:id="@+id/camera_add_activity_backString_editLayout_label"
                     style="@style/edit_text_label_style"
                     android:text="@string/add_backstring_label"
-                    android:layout_marginLeft="9dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
                 <EditText
@@ -166,9 +164,10 @@
                     android:textColor="@color/black_565656"
                     android:textSize="17dp"
                     android:hint="@string/add_edit_backstring_hint"
-                    android:layout_toRightOf="@+id/camera_add_activity_backString_editLayout_label"
+                    android:layout_marginLeft="75dp"
                     android:layout_centerVertical="true"
-                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:imeOptions="actionDone"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"/>
 
@@ -188,9 +187,9 @@
                     android:textColor="@color/black_565656"
                     android:textSize="17dp"
                     android:hint="@string/add_edit_pwd_hint"
-                    android:maxLines="1"
-                    android:layout_marginLeft="9dp"
-                    android:layout_toRightOf="@+id/camera_add_activity_pwd_editLayout_label"
+                    android:singleLine="true"
+                    android:imeOptions="actionDone"
+                    android:layout_marginLeft="75dp"
                     android:layout_centerVertical="true"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"/>
