--- a/app/src/main/res/layout/camera_play_activity.xml
+++ b/app/src/main/res/layout/camera_play_activity.xml
@@ -124,17 +124,17 @@
 
             </android.support.v7.widget.CardView>
             <android.support.v7.widget.CardView
-                android:id="@+id/camera_play_activity_btnroom_playroom"
+                android:id="@+id/camera_play_activity_btnroom_backroom"
                 android:layout_weight="1"
                 app:cardBackgroundColor="@color/translucent"
                 android:layout_width="match_parent"
                 android:layout_height="0dp">
                 <TextView
-                    android:id="@+id/camera_play_activity_btnroom_playroom_tv"
+                    android:id="@+id/camera_play_activity_btnroom_backroom_tv"
                     android:textColor="@color/white"
                     android:textSize="13sp"
                     android:layout_gravity="center"
-                    android:text="@string/play_start"
+                    android:text="@string/play_back"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
